# sentiment-service-prod

./: .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: train.py
src/sentiment_service/: app.py
src/sentiment_service/routers/: predict.py
src/sentiment_service/schemas/: input.py
