[project]
name = "sentiment-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Kla1mzZ",email = "kla1mzz16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "ruff (>=0.12.12,<0.13.0)"
]

[tool.poetry]
packages = [{include = "sentiment_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
